# SarthV-Softnutics

./: main.py  script1.sh  script2.sh
dataset/Poetry_Python/Scripts/: main.py  script_1_1.sh
dataset/Poetry_Python/pkgnew/: pyproject.toml
dataset/Poetry_Python/pkgnew/tests/: test_pkgnew.py
dataset/xnncpkg/: pyproject.toml
