[tool.poetry]
name = "xnncpkg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
absl-py = "^1.0.0"
appdirs = "^1.4.4"
astor = "^0.8.1"
attrs = "^21.4.0"
autopep8 = "^1.6.0"
beautifulsoup4 = "^4.10.0"
black = "^22.3.0"
bs4 = "^0.0.1"
bz2file = "^0.98"
certifi = "^2021.10.8"
chardet = "^4.0.0"
click = "^8.1.2"
cloudpickle = "^2.0.0"
cmake = "^3.22.3"
conda = "^4.3.16"
cycler = "^0.11.0"
Cython = "^0.29.28"
decorator = "^5.1.1"
et-xmlfile = "^1.1.0"
flatbuffers = "^2.0"
gast = "^0.5.3"
google-pasta = "^0.2.0"
graphviz = "^0.19.1"
grpcio = "^1.45.0"
h5py = "^3.6.0"
idna = "^3.3"
imageio = "^2.16.1"
importlib-metadata = "^4.11.3"
jdcal = "^1.4.1"
jenkins = "^1.0.2"
joblib = "^1.1.0"
Keras-Applications = "^1.0.8"
Keras-Preprocessing = "^1.1.2"
kiwisolver = "^1.4.2"
Markdown = "^3.3.6"
matplotlib = "^3.5.1"
mock = "^4.0.3"
more-itertools = "^8.12.0"
mypy-extensions = "^0.4.3"
networkx = "^2.7.1"
ninja = "^1.10.2"
nose = "^1.3.7"
numpy = "^1.22.3"
onnx = "^1.11.0"
onnxruntime = "^1.11.0"
opencv-python = "^4.5.5"
openpyxl = "^3.0.9"
packaging = "^21.3"
pandas = "^1.4.2"
parameterized = "^0.8.1"
pathspec = "^0.9.0"
Pillow = "^9.1.0"
protobuf = "^3.20.0"
psutil = "^5.9.0"
py = "^1.11.0"
py-ubjson = "^0.16.1"
pyaml = "^21.10.1"
pycodestyle = "^2.8.0"
pycosat = "^0.6.3"
pyjson = "^1.3.0"
pyparsing = "^3.0.7"
pyreadline = "^2.1"
python-dateutil = "^2.8.2"
pytz = "^2022.1"
PyWavelets = "^1.3.0"
PyYAML = "^6.0"
regex = "^2022.3.15"
requests = "^2.27.1"
"ruamel.yaml" = "^0.17.21"
"ruamel.yaml.clib" = "^0.2.6"
scikit-image = "^0.19.2"
scikit-learn = "^1.0.2"
scikit-optimize = "^0.9.0"
Shapely = "^1.8.1"
six = "^1.16.0"
soupsieve = "^2.3.1"
sqlparse = "^0.4.2"
synr = "^0.6.0"
tensorboard = "^2.8.0"
tensorflow-estimator = "^2.8.0"
termcolor = "^1.1.0"
tflite = "^2.4.0"
threadpoolctl = "^3.1.0"
tifffile = "^2022.3.25"
toml = "^0.10.2"
torch = "^1.11.0"
torchvision = "^0.12.0"
tornado = "^6.1"
tqdm = "^4.64.0"
typed-ast = "^1.5.2"
typing-extensions = "^4.1.1"
urllib3 = "^1.26.9"
virtualenv-clone = "^0.5.7"
wcwidth = "^0.2.5"
Werkzeug = "^2.1.1"
wrapt = "^1.14.0"
xgboost = "^1.5.2"
xlrd = "^2.0.1"
XlsxWriter = "^3.0.3"
zipp = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
